--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://axelhovde.github.io/little-loops",
   "scripts": {
     "dev": "vite",
     "build:dev": "vite build --mode development",
@@ -10,7 +11,7 @@
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "build": "vite build && cp dist/index.html dist/404.html"
+    "build": "vite build && powershell -Command \"Copy-Item .\\dist\\index.html .\\dist\\404.html\""
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
